# pycounts_khalidca

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
tests/: test_pycounts.py  test_pycounts_khalidca.py
