[tool.poetry]
name = "pycounts_khalidca"
version = "0.1.0"
description = "A simple toy project to demonstrate how to create python packages"
authors = ["Khalid Abdilahi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
